--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,112 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For the Record</title>
+    <title>For the Record - Home</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
-<!-- Bootstrap Navbar with Dropdowns and Search Bar -->
+<!-- Bootstrap Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">For the Record</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Navbar items including dropdowns aligned to the left -->
-      <ul class="navbar-nav me-auto">
-    <!-- ARTISTS Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownArtists" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        ARTISTS
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdownArtists">
-        <% dropdowns.artists.forEach(function(artist) { %>
-          <li><a class="dropdown-item" href="/artist/<%= artist %>"><%= artist %></a></li>
-        <% }); %>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+
+        <!-- GENRE Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownGenre" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Genre
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownGenre">
+            <% dropdowns.genres.forEach(function(genre) { %>
+              <li><a class="dropdown-item" href="/genre/<%= genre %>"><%= genre %></a></li>
+            <% }); %>
+          </ul>
+        </li>
+
+        <% if (user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cart">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/logout">Logout</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/register">Register</a>
+          </li>
+        <% } %>
       </ul>
-    </li>
-
-    <!-- DECADE Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownYear" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Decade
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdownYear">
-        <% dropdowns.decades.forEach(function(decade) { %>
-          <li><a class="dropdown-item" href="/decade/<%= decade %>"><%= decade %></a></li>
-        <% }); %>
-      </ul>
-    </li>
-
-    <!-- GENRE Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownGenre" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        GENRE
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdownGenre">
-        <% dropdowns.genres.forEach(function(genre) { %>
-          <li><a class="dropdown-item" href="/genre/<%= genre %>"><%= genre %></a></li>
-        <% }); %>
-      </ul>
-    </li>
-  </ul>
-
-
-      <!-- Search bar and other items aligned to the right -->
-      <form class="d-flex ms-auto" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Go</button>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/cart">Cart</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
-        </li>
-      </ul>
     </div>
   </div>
 </nav>
 
 
-<!-- Main Content using Bootstrap's Grid System -->
+<!-- Main Content -->
 <div class="container mt-4">
+  <h1>Welcome to For the Record</h1>
+  <p>Browse through our extensive collection of music albums and accessories.</p>
   <div class="row">
     <% albums.forEach(function(album) { %>
-      <div class="col-md-3">
-        <!-- Wraps the card in an anchor tag to make it clickable -->
-        <a href="/item/<%= album.id %>" class="card-link text-decoration-none">
-          <div class="card h-100">
-            <img src="<%= album.imageUrl %>" class="card-img-top" alt="<%= album.title %>">
-            <div class="card-body">
-              <h5 class="card-title"><%= album.title %></h5>
-              <p class="card-text">Artist: <%= album.artist %></p>
-              <p class="card-text">Price: $<%= album.price %></p>
-            </div>
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="<%= album.imageUrl %>" class="card-img-top" alt="<%= album.title %>">
+          <div class="card-body">
+            <h5 class="card-title"><%= album.title %></h5>
+            <p class="card-text"><%= album.artist %></p>
+            <p class="card-text">$<%= album.price.toFixed(2) %></p>
+            <a href="/item/<%= album.id %>" class="btn btn-primary">View Details</a>
+            <button class="btn btn-success add-to-cart-btn" data-id="<%= album.id %>">Add to Cart</button>
           </div>
-        </a>
-        <div class="card-footer">
-          <button type="button" class="btn btn-primary w-100 add-to-cart-btn" data-id="<%= album.id %>">Add to Cart</button>
-        </div>          
+        </div>
       </div>
     <% }); %>
   </div>
 </div>
 
-
-
-
 <!-- Bootstrap JS -->
 <script src="js/bootstrap.bundle.min.js"></script>
 <!-- Custom JS -->
 <script src="js/custom.js"></script>
-
-
 
 </body>
 </html>
