--- a/views/item.ejs
+++ b/views/item.ejs
@@ -4,76 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= album.title %> - For the Record</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     
 </head>
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">For the Record</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Navbar items including dropdowns aligned to the left -->
-            <ul class="navbar-nav me-auto">
-  <!-- ARTISTS Dropdown -->
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownArtists" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-      ARTISTS
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdownArtists">
-      <% dropdowns.artists.forEach(function(artist) { %>
-        <li><a class="dropdown-item" href="/artist/<%= artist %>"><%= artist %></a></li>
-      <% }); %>
-    </ul>
-  </li>
+<!-- Bootstrap Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">For the Record</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
 
-  <!-- DECADE Dropdown -->
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownYear" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Decade
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdownYear">
-      <% dropdowns.decades.forEach(function(decade) { %>
-        <li><a class="dropdown-item" href="/decade/<%= decade %>"><%= decade %></a></li>
-      <% }); %>
-    </ul>
-  </li>
-</ul>
+        <!-- ARTISTS Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownArtists" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Artists
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownArtists">
+            <% dropdowns.artists.forEach(function(artist) { %>
+              <li><a class="dropdown-item" href="/artist/<%= artist %>"><%= artist %></a></li>
+            <% }); %>
+          </ul>
+        </li>
 
-  <!-- GENRE Dropdown -->
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownGenre" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-      GENRE
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdownGenre">
-      <% dropdowns.genres.forEach(function(genre) { %>
-        <li><a class="dropdown-item" href="/genre/<%= genre %>"><%= genre %></a></li>
-      <% }); %>
-    </ul>
-  </li>
+        <!-- GENRE Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownGenre" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Genre
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownGenre">
+            <% dropdowns.genres.forEach(function(genre) { %>
+              <li><a class="dropdown-item" href="/genre/<%= genre %>"><%= genre %></a></li>
+            <% }); %>
+          </ul>
+        </li>
+
+        <% if (user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cart">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/logout">Logout</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/register">Register</a>
+          </li>
+        <% } %>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
       
-            <!-- Search bar and other items aligned to the right -->
-            <form class="d-flex ms-auto" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Go</button>
-            </form>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="/cart">Cart</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      </nav>
+
 
       
       <div class="container mt-4">
